<resources>
    <string name="sesp_title">Next Gen ESP</string>
    <string name="activate_device_administration">$ACTIVATE_DEVICE_ADMINISTRATION$</string>
    <string name="device_admin_enabled">$DEVICE_ADMIN_ENABLED$</string>
    <string name="device_admin_disabled">$DEVICE_ADMIN_DISABLED$</string>
    <string name="pin">$PIN$</string>
    <string name="submitpin">$SUBMITPIN$</string>
    <string name="pin_with_fingerprint">$USE_FINGERPRINT_OR_PIN$</string>
    <string name="app_name">$NEXTGENESP$</string>
    <string name="ok">$OK$</string>
    <string name="yes">$YES$</string>
    <string name="no">$NO$</string>
    <string name="continue2">$CONTINUE$</string>
    <string name="add">$ADD$</string>
    <string name="delete">$DELETE$</string>
    <string name="save">$SAVE$</string>
    <string name="saved">$SAVED$</string>
    <string name="cancel">$CANCEL$</string>
    <string name="close">$CLOSE$</string>
    <string name="next">$NEXT$</string>
    <string name="remove">$REMOVE$</string>
    <string name="skip">$SKIP$</string>
    <string name="android">$ANDROID$</string>
    <string name="error_unknown">$UNKNOWN_ERROR$</string>
    <string name="network_error">$NETWORK_ERROR$</string>
    <string name="action_cancelled">$ACTION_CANCELLED$</string>
    <string name="loading">$LOADING$</string>
    <string name="downloading">$DOWNLOADING_APK$</string>
    <string name="error_not_implemented">$IS_NOT_IMPLEMENTED_YET$</string>
    <string name="business_version">$BUSINESS_VERSION$</string>
    <string name="framework_version">$FRAMEWORK_VERSION$</string>
    <string name="icon">$ICON$</string>
    <string name="na">$N_SLASH_A$</string>
    <string name="delete_all">$DELETE_ALL$</string>
    <string name="delete_by_id">$DELETE_BY_ID$</string>
    <string name="length_of">$LENGTH_OF$</string>
    <string name="material_setting_identifier">$IDENTIFIER$</string>
    <string name="length_of_identifier">$LENGTH_OF_IDENTIFIER$</string>
    <string name="identifier">$IDENTIFIER$</string>
    <string name="info">$INFO$</string>
    <string name="number">$NUMBER$</string>
    <string name="count">$COUNT$</string>
    <string name="amount">$AMOUNT$</string>
    <string name="reload">$RELOAD$</string>
    <string name="saving">$SAVING$</string>
    <string name="error">$ERROR$</string>
    <string name="warning">$WARNING$</string>
    <string name="start">$START$</string>
    <string name="end">$END$</string>
    <string name="undo">$UNDO$</string>
    <string name="authentication_failure">$AUTHENTICATION_FAILURE$</string>
    <string name="invalid_fingerprint_message">$INVALID_FINGERPRINT_PLEASE_TRY_ONCE_AGAIN_OR_USE_PIN$</string>
    <string name="help">$HELP$</string>
    <string name="help_register_new_broken_device">$REGISTER_NEW_BROKEN_DEVICE_DESCRIPTION$</string>
    <string name="help_stock_taking_list">$STOCK_TAKING_LIST_DESCRIPTION$</string>
    <string name="network_available">$NETWORK_CONNECTION_AVAILABLE$</string>
    <string name="network_unavailable">$NETWORK_CONNECTION_UNAVAILABLE$</string>
    <string name="login">$LOGIN$</string>
    <string name="username">$USERNAME$</string>
    <string name="password">$PASSWORD$</string>
    <string name="force_offline_mode">$FORCE_OFFLINE_MODE$</string>
    <string name="password_will_expire_in_x">$PASSWORD_WILL_EXPIRE_IN_X$</string>
    <string name="left">$LEFT$</string>
    <string name="right">$RIGHT$</string>
    <string name="x_days_and_y_hours">$X_DAYS_AND_Y_HOURS$</string>
    <string name="x_hours_and_y_minutes">$X_HOURS_AND_Y_MINUTES$</string>
    <string name="x_minutes_and_y_seconds">$X_MINUTES_AND_Y_SECONDS$</string>
    <string name="please_change_password">$PLEASE_CHANGE_PASSWORD_BEFORE_IT_EXPIRES$</string>
    <string name="logging_in_user">$LOGGING_IN_USER$</string>
    <string name="downloading_types">$DOWNLOADING_TYPE_DATA$</string>
    <string name="downloading_workorders">$DOWNLOADING_WORKORDERS$</string>
    <string name="error_missing_username">$ENTER_USERNAME$</string>
    <string name="error_missing_password">$ENTER_PASSWORD$</string>
    <string name="error_missing_username_password">$ENTER_USERNAME_AND_PASSWORD$</string>
    <string name="error_wrong_username_or_password">$INVALID_USERNAME_OR_PASSWORD$</string>
    <string name="error_offline_login_not_possible">$OFFLINE_LOGIN_NOT_POSSIBLE$</string>
    <string name="please_wait">$ONE_MOMENT_PLEASE$</string>
    <string name="provide_all_input">$PLEASE_PROVIDE_ALL_NECESSARY_INPUT$</string>
    <string name="proceed_incorrect_mep_meter_code">$DO_YOU_STILL_WANT_TO_PROCEED$</string>
    <string name="forgot_password">$FORGOT_PASSWORD$</string>
    <string name="logout">$LOGOUT$</string>
    <string name="logout_status">$LOGOUT_STATUS$</string>
    <string name="number_of_orders_to_sync">$NUMBER_OF_ORDERS_TO_SYNC$</string>
    <string name="logout_offline_message">$IF_YOU_HAVE_WORK_ORDERS_TO_SYNC_THEY_WILL_BE_SYNCED_IN_BACKGROUND_WHEN_INTERNET_CONNECTION_IS_AVAILABLE$</string>
    <string name="logout_started">$LOGOUT_STARTED$</string>
    <string name="logout_attempt_x_failed">$LOGOUT_ATTEMPT_X_FAILED$</string>
    <string name="server_settings">$SERVER_SETTINNGS$</string>
    <string name="change_server_address">$CHANGE_SERVER_ADDRESS$</string>
    <string name="reset">$RESET$</string>
    <string name="reset_to_default_values">$RESET_TO_DEFAULT_VALUES$</string>
    <string name="default_values_applied">$DEFAULT_VALUES_APPLIED$</string>
    <string name="password_assistance">$PASSWORD_ASSISTANCE$</string>
    <string name="permission_grant_explanation">
        $TO_CONTINUE_YOU_SHOULD_ALLOW_NEXTGENESP_TO_RECEIVE_AND_READ_SMS_BY_PRESSING_CONTINUE_YOU_WILL_BE_TAKEN_TO_THE_APP_SETTINGS$</string>
    <string name="permission_required_question">$PERMISSION_REQUIRED$</string>
    <string name="otp_differs">$OTP_DIFFERS_PLEASE_TRY_AGAIN$</string>
    <string name="resend_code">$RESEND_CODE$</string>
    <string name="we_ll_ask_for_this_password_whenever_you_sign_in">$WE_LL_ASK_FOR_THIS_PASSWORD_WHENEVER_YOU_SIGN_IN$</string>
    <string name="enter_new_password">$ENTER_NEW_PASSWORD$</string>
    <string name="re_enter_new_password">$RE-ENETER_NEW_PASSWORD$</string>
    <string name="passwords_differ_please_try_again">$PASSWORDS_DIFFER_PLEASE_TRY_AGAIN$</string>
    <string name="save_changes">$SAVE_CHANGES$</string>
    <string name="your_password_has_been_changed">$YOUR_PASSWORD_HAS_BEEN_CHANGED$</string>
    <string name="password_change_unsuccessful">$YOUR_PASSWORD_HAS_BEEN_NOT_CHANGED_PLEASE_TRY_TO_RESET_THE_PASSWORD_ONCE_AGAIN$</string>
    <string name="to_log_on_use_the_changed_credentials">$TO_LOG_ON_USE_THE_CHANGED_CREDENTIALS$</string>
    <string name="sign_in">$SIGN_IN$</string>
    <string name="enter_email_id_or_mobile_number">
        $ENTER_THE_EMAIL_ID_OR_MOBILE_PHONE_NUMBER_REGISTERED_WITH_YOUR_NEXTGENESP_ACCOUNT$</string>
    <string name="mobile_number_or_email_id">$MOBILE_NUMBER_OR_EMAILID$</string>
    <string name="error_otp_missing">$PLEASE_ENTER_OTP$</string>
    <string name="error_maximum_limit_reached">$YOU_HAVE_REACHED_THE_MAXIMUM_LIMIT_FOR_GENERATING_OTP$</string>
    <string name="error_user_locked">$USER_HAS_BEEN_LOCKED_PLEASE_CONTACT_SYSTEM_ADMINISTRATOR_FOR_THE_HELP$</string>
    <string name="error_validation_of_mobile_bumber_or_email_id">$PLEASE_ENTER_A_VALID_MOBILE_NUMBER_OR_EMAIL_ID$</string>
    <string name="invalid_username">$PLEASE_ENTER_A_VALID_USERNAME$</string>
    <string name="locked_user">$YOU_ARE_A_LOCKED_USER_PLEASE_CONTACT_SYSTEM_ADMINISTRATOR$</string>
    <string name="not_matching_password_requirements">$YOUR_ENTERED_PASSWORD_FOR_RESET_IS_NOT_MATCHING_THE_PASSWORD_REQUIREMENTS_PLEASE_TRY_ONCE_AGAIN$</string>
    <string name="otp_generation_failed">$OTP_GENERATION_FAILED_PLEASE_TRY_ONCE_AGAIN$</string>
    <string name="otp_send_failed">$SERVER_ISSUE_WHILE_SENDING_OTP_PLEASE_TRY_ONCE_AGAIN$</string>
    <string name="password_reset_not_supported">$PASSWORD_RESET_NOT_SUPPORTED_PLEASE_CONTACT_SYSTEM_ADMINISTRATOR$</string>
    <string name="enter_the_otp_recived">$ENTER_THE_RECEIVED_OTP$</string>
    <string name="try_again">$TRY_AGAIN$</string>
    <string name="verify_otp">$VERIFY_OTP$</string>
    <string name="password_change_success">$PASSWORD_CHANGE_SUCCESSFUL$</string>
    <string name="password_change_unsuccess">$PASSWORD_CHANGE_UNSUCCESSFUL$</string>
    <string name="sec">$SEC$</string>
    <string name="invalid_mobile_number">$PLEASE_ENTER_A_VALID_MOBILE_NUMBER$</string>
    <string name="invalid_email_id">$PLEASE_ENTER_A_VALID_EMAILID$</string>
    <string name="session">$SESSION$</string>
    <string name="build">$BUILD$</string>
    <string name="system">$SYSTEM$</string>
    <string name="logged_in_as">$LOGGED_IN_AS$</string>
    <string name="locale"> $LOCALE$</string>
    <string name="server_address">$SERVER_ADDRESS$</string>
    <string name="database_information">$DATABASE_INFORMATION$</string>
    <string name="framework_name">$FRAMEWORK_NAME$</string>
    <string name="business_name">$BUSINESS_NAME$</string>
    <string name="build_time">$BUILD_TIME$</string>
    <string name="build_user">$BUILD_USER$</string>
    <string name="operating_system">$OPERATING_SYSTEM$</string>
    <string name="java">$JAVA$</string>
    <string name="title_activity_main_menu">$MAIN_MENU$</string>
    <string name="title_activity_print_menu">$PRINT_MENU$</string>
    <string name="menu_about">$ABOUT$</string>
    <string name="menu_reload">$RELOAD$</string>
    <string name="menu_status">$STATUS$</string>
    <string name="menu_document">$MENU_DOCUMENT$</string>
    <string name="menu_installation_document">$MENU_INSTALLATION_DOCUMENT$</string>
    <string name="menu_safety_document">$MENU_SAFETY_DOCUMENT$</string>
    <string name="device_info">$DEVICE_INFO$</string>
    <string name="pref_property_number">$PROPERTY_NUMBER$</string>
    <string name="pref_giai"> $GIAI$</string>
    <string name="pref_serial_number"> $SERIAL_NUMBER$</string>
    <string name="pref_model">$MODEL$</string>
    <string name="pref_status">$STATUS$</string>
    <string name="pref_phone_number">$PHONE_NUMBER$</string>
    <string name="pref_ip_address">$IP_ADDRESS$</string>
    <string name="pref_manufacturer">$MANUFACTURER$</string>
    <string name="pref_production_date">$PRODUCTION_DATE$</string>
    <string name="pref_communication_type">$COMMUNICATION_TYPE$</string>
    <string name="pref_owner">$OWNER$</string>
    <string name="pref_configuration">$CONFIGURATION$</string>
    <string name="pref_reason_for_status">$REASON_FOR_STATUS$</string>
    <string name="pref_latest_stock">$LATEST_STOCK$</string>
    <string name="arrived">$ARRIVED$</string>
    <string name="sent">$SENT$</string>
    <string name="pallet">$PALLET$</string>
    <string name="pref_pallet_code">$PALLET_CODE$</string>
    <string name="pallet_type">$PALLET_TYPE$</string>
    <string name="pallet_status">$PALLET_STATUS$</string>
    <string name="stock">$STOCK$</string>
    <string name="add_and_close">$ADD_AND_CLOSE$</string>
    <string name="add_more">$ADD_MORE$</string>
    <string name="tech_plan">$TECHNICAL_PLANNING:S$</string>
    <string name="register_new_meter_model">$MODEL$:</string>
    <string name="existing_model">$EXISTING_MODEL$</string>
    <string name="perform_verification">$PERFORM_VERIFICATION$</string>
    <string name="scan">$SCAN$</string>
    <string name="one_or_more_entries_have_invalid_inputs">$ONE_OR_MORE_ENTRIES_HAVE_INVALID_INPUTS$</string>
    <string name="current">$CURRENT$</string>
    <string name="new_panel">$NEW_SOLAR_PANEL$</string>
    <string name="type_of_charger">$TYPE_OF_CHARGER$</string>
    <string name="length_of_cable">$LENGTH_OF_CABLE$</string>
    <string name="no_of_connectors">$NUMBER_OF_CONNECTORS$</string>
    <string name="power">$POWER_KW$</string>
    <string name="new_unit">$NEW_UNIT$</string>
    <string name="existing_unit">$EXISTING_UNIT$</string>
</resources>